cmake_minimum_required(VERSION 3.22)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(main main.cpp)
add_executable(boggleGame boggleGame.cpp)
add_executable(Picnic Picnic.cpp)
add_executable(gameBoard gameBoard.cpp)
add_executable(clockSync clockSync.cpp)
add_executable(Reverse_Quad Reverse_Quad.cpp)
add_executable(Fence Fence.cpp)
add_executable(binomial binomial.cpp)
add_executable(JumpGame JumpGame.cpp)
add_executable(WildCard WildCard.cpp)
add_executable(LIS LIS.cpp)
add_executable(LISFAST.cpp LISFAST.cpp)